kubernetes/overlays/homelab/open-webui/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: open-webui
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
