kubernetes/overlays/homelab/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: open-webui
  namespace: open-webui
  annotations:
    tailscale.com/tags: "tag:k8s-open-webui"

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: open-webui
      port:
        number: 80
  tls:
    - hosts:
        - open-webui
